[project]
name = "rlm-cli"
version = "0.5.0"
description = "RLM-powered codebase analysis CLI — security audits, architecture reviews, documentation, debugging."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "dspy>=3.1.2",
]

[project.scripts]
rlm-cli = "rlm_cli.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "ruff>=0.4",
]
